# Feedwave

./: .gitignore  Cargo.toml  Dockerfile
configuration/: base.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  starter.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
