[package]
name = "feedwave"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld-lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "feedwave"

[dependencies]
actix-web = "4.0.0"
chrono = "0.4.39"
config = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.9"
